week4-web-ui/k8s/web-ui.yaml
#this file deploys and runs your Vue frontend in the cluster with health checks 
#and resource limits; paas-ingress.yaml sends public web traffic to it.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: week4-web-ui
  namespace: paas-system

spec:
  replicas: 2

  selector:
    matchLabels:
      app: week4-web-ui

  template:
    metadata:
      labels:
        app: week4-web-ui

    spec:
      imagePullSecrets:
        - name: stackit-registry

      containers:
        - name: web-ui
          image: registry.onstackit.cloud/gaurav-paas-20a60c06/week4-web-ui:v1.1.3

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80

          livenessProbe:
            httpGet:
              path: /
              port: 80

          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: week4-web-ui
  namespace: paas-system

spec:
  selector:
    app: week4-web-ui

  ports:
    - port: 80
      targetPort: 80
