week4-web-ui/k8s/paas-ingress.yaml
#Ingress rules are mentioned here:

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: paas-platform
  namespace: paas-system

  annotations:
    # Ask cert-manager for a Let's Encrypt certificate.
    cert-manager.io/cluster-issuer: letsencrypt-prod

    # This Ingress should accept HTTPS traffic.
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  ingressClassName: traefik

  # TLS certificate for our public hostname.
  tls:
    - hosts:
        - gaurav-paas.runs.onstackit.cloud
      secretName: gaurav-paas-tls

  rules:
    - host: gaurav-paas.runs.onstackit.cloud
      http:
        paths:

          # API → Go backend.
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: week3-paas-api
                port:
                  number: 80

          # Everything else → Vue UI.
          - path: /
            pathType: Prefix
            backend:
              service:
                name: week4-web-ui
                port:
                  number: 80
